--- a/public/014-prod-card-2.html
+++ b/public/014-prod-card-2.html
@@ -1230,9 +1230,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1279,13 +1277,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1332,21 +1326,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1393,9 +1379,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1442,13 +1426,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1495,21 +1475,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1556,9 +1528,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1605,13 +1575,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1658,21 +1624,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1719,9 +1677,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1768,13 +1724,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1821,21 +1773,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
