--- a/public/014-prod-card.html
+++ b/public/014-prod-card.html
@@ -1242,9 +1242,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1291,13 +1289,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1344,21 +1338,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1405,9 +1391,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1454,13 +1438,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1507,21 +1487,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1568,9 +1540,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1617,13 +1587,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1670,21 +1636,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1731,9 +1689,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1780,13 +1736,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1833,21 +1785,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
