--- a/public/05-prod-card.html
+++ b/public/05-prod-card.html
@@ -1378,9 +1378,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1427,13 +1425,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1480,21 +1474,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1541,9 +1527,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1590,13 +1574,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1643,21 +1623,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1704,9 +1676,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1753,13 +1723,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1806,21 +1772,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1867,9 +1825,7 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1916,13 +1872,9 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
@@ -1969,21 +1921,13 @@
 												<div class="prod-item__a-slider prod-item__a-slider--commnon">
 													<div class="swiper-container sNewProdItem-slider-js">
 														<div class="swiper-wrapper">
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-1.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-2.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-3.png" alt=""/></a>
 															</div>
-															<div class="swiper-slide">
-																<div class="prod-item__a-img"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/>
-																</div>
+															<div class="swiper-slide"><a class="prod-item__a-img" href="#"><img loading="lazy" src="img/@2x/cat-card-4.png" alt=""/></a>
 															</div>
 															<div class="swiper-slide text-start">
 																<div class="prod-item__c-title">Характеристики
