--- a/public/020-landing.html
+++ b/public/020-landing.html
@@ -705,6 +705,8 @@
 				</picture>
 				<!-- /picture-->
 				<div class="sBaner__container container">
+					<div class="sBaner__img d-none d-xl-block"><img loading="lazy" src="img/@2x/landing-img.png" alt=""/>
+					</div>
 					<div class="sBaner__black">
 					</div>
 					<div class="section-title">
@@ -2151,7 +2153,8 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script><script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
