--- a/public/index.html
+++ b/public/index.html
@@ -3287,7 +3287,8 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="libs/scrollbooster/scrollbooster.min.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script><script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
