--- a/public/011-article.html
+++ b/public/011-article.html
@@ -6,7 +6,8 @@
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
-		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
+		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
@@ -747,6 +748,24 @@
 									<br/>
 									<!--br can be removed-->по подбору, уходу, сервису
 								</h1>
+								<div class="custom-list custom-list--plus">
+										<ul>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										</ul>
+								</div>
+								<div class="custom-list custom-list--minus">
+										<ul>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										</ul>
+								</div><i>Полезно знать! В один полный комплект (набор) входят чашка и блюдце для десерта, четыре разных по глубине тарелки (для первого и второго блюд, для хлеба, для салата), две ложки/вилки, стакан и нож.</i>
 								<p>Ассортимент мотобуров довольно широкий. На рынке представлены инструменты разных производителей. Модели различаются по техническим характеристикам, функциональным возможностям, качеству исполнения, стоимости. Классифицируются их по назначению на бытовые и профессиональные. Первые предназначены для работы на приусадебном участке, в саду, на даче, вторые используют на стройплощадках, при проведении геологических исследований и пр. Как выбрать хороший мотобур? Ответить на этот вопрос непросто. Нужно проанализировать различные параметры, сравнить модели, чтобы подобрать наиболее подходящий под ваши цели инструмент.</p>
 							</section>
 							<section>
@@ -1423,6 +1442,35 @@
 				</form>
 			</div>
 		</div>
+		<div class="modal-address" id="modal-address" style="display: none">
+			<div class="form-wrap">
+				<form>
+					<label class="form-wrap__name-label"><span class="form-wrap__input-title">Название</span><input class="form-wrap__name-inp form-control" type="text" value="Моя дача"/>
+					</label>
+					<div class="form-wrap__inp-row row">
+						<div class="col-sm-12">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Улица"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Дом, корпус"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-sm-6">
+							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Квартира"/>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+						<div class="col-12">
+							<button class="form-wrap__btn" type="submit">Сохранить данные
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
 		<!-- end modals-->
 		<!-- modal libs--><script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
@@ -1434,7 +1482,8 @@
 		<!-- /slider libs-->
 		<script src="libs/inputmask/inputmask.min.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-		<script src="js/libs.js"></script>
+		<script src="libs/scrollbooster/scrollbooster.min.js"></script><script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
